--- a/settings/blast.ini
+++ b/settings/blast.ini
@@ -1,6 +1,6 @@
 [mesh]
-Nx=64
-Ny=64
+Nx=256
+Ny=256
 xmin=0.0
 xmax=1.0
 ymin=0.0
@@ -15,7 +15,7 @@ boundaries_y=periodic
 
 [solvers]
 riemann_solver=hllc
-reconstruction=plm
+reconstruction=pcm
 CFL=0.1
 
 [physics]
