--- a/settings/mhd/blast_mhd_low_beta.ini
+++ b/settings/mhd/blast_mhd_low_beta.ini
@@ -11,13 +11,14 @@ tend=1.0
 save_freq=0.01
 boundaries_x=periodic
 boundaries_y=periodic
+output_filename=blast_mhd_low_beta
 
 [solvers]
-riemann_solver=hlld
+riemann_solver=fivewaves
 time_stepping=RK2
 reconstruction=plm
 CFL=0.1
 
 [physics]
-gamma0=1.6666667
+gamma0=1.4
 problem=blast_mhd_standard
