--- a/settings/mhd/blast_mhd_standard.ini
+++ b/settings/mhd/blast_mhd_standard.ini
@@ -11,13 +11,13 @@ tend=1.0
 save_freq=0.01
 boundaries_x=periodic
 boundaries_y=periodic
-
+output_filename=blast_mhd_standard
 [solvers]
-riemann_solver=fivewaves
+riemann_solver=hlld
 time_stepping=RK2
 reconstruction=plm
 CFL=0.1
 
 [physics]
-gamma0=1.4
+gamma0=1.6666667
 problem=blast_mhd_standard
